# twat-audio

./: .pre-commit-config.yaml  CHANGELOG.md  CLEANUP.txt  LOG.md  PLAN.md  README.md  REFACTOR_FILELIST.txt  REPO_CONTENT.txt  TODO.md  VERSION.txt  build.sh  cleanup.py  install.sh  llms.txt  publish.sh  pyproject.toml
.cursor/rules/: filetree.mdc
.github/workflows/: push.yml  release.yml
src/: twat_audio.py
src/twat_audio/: __init__.py  __main__.py  ffmpeg.py  genai.py  operations.py  twat_audio.py
tests/: test_audio_operations.py  test_cli.py  test_package.py  test_twat_audio.py
